# arduino.midilooper.lib

./: .gitignore  README  README.md  VERSION  build.sh
ArduinoCoreLib/: CMakeLists.txt
ArduinoEEPROMLib/: CMakeLists.txt
ArduinoLCDLib/: CMakeLists.txt  LiquidCrystal.cpp  LiquidCrystal.h
ArduinoMIDILib/: CMakeLists.txt
ArduinoSPILib/: CMakeLists.txt
ArduinoSPIRAMLib/: CMakeLists.txt  SpiRAM.cpp  SpiRAM.h
